[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.189"
serde_json = "1.0.107"
clap = "4.4.6"
rand = "0.8.5"
log = "0.4.20"
regex = "1.10.1"
tokio = "1.33.0"
anyhow = "1.0.75"
chrono = "0.4.31"
bitflags = "2.4.0"
reqwest = "0.11.22"
uuid = "1.4.1"
dirs = "5.0.1"
diesel = { version = "2.1.3", features = ["postgres"] }
structopt = "0.3.26"
